examples/microservices/common/build/errors/not-authorized-error.d.ts
import { CustomError } from './custom-error';
export declare class NotAuthorizedError extends CustomError {
    statusCode: number;
    constructor();
    formatError(): {
        message: string;
    };
}
